# terminaltables

./: .travis.yml  Dockerfile  Makefile  README.rst  example1.py  pyproject.toml  setup.py  tox.ini
terminaltables/: __init__.py  base_table.py  build.py  other_tables.py  terminal_io.py  width_and_alignment.py
tests/test_all_tables_e2e/: test_ascii_table.py  test_borderless_table.py
tests/test_base_table/: test_unicode_table.py
