[tool.poetry]
name = "terminaltables"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
colorclass = "^2.2.0"
termcolor = "^1.1.0"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
bpython = "^0.20.1"
pdbpp = "^0.10.2"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
